Fix Git URL in Jenkinsfile

--- a/DemoWebShop/Jenkinsfile
+++ b/DemoWebShop/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         stage('Get Code') {
             steps {
                 git branch: 'main',
-                    url: 'https://github.com/salmakhaled-1/playwright-jenkins/new/main/DemoWebShop'
+                    url: 'https://github.com/salmakhaled-1/playwright-jenkins.git'
             }
         }
 
