--- a/DemoWebShop/Jenkinsfile
+++ b/DemoWebShop/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
 
         stage('Install Dependencies') {
             steps {
-                sh '''
+                bat '''
                 python -m venv venv
                 . venv/bin/activate
                 pip install -r requirements.txt
@@ -23,7 +23,7 @@ pipeline {
 
         stage('Run Tests') {
             steps {
-                sh '''
+                bat '''
                 . venv/bin/activate
                 pytest
                 '''
