--- a/DemoWebShop/Jenkinsfile
+++ b/DemoWebShop/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
             steps {
                 bat '''
                 python -m venv venv
-                . venv/bin/activate
+                . venv\\Scripts\\activate
                 pip install -r requirements.txt
                 playwright install
                 '''
@@ -24,7 +24,7 @@ pipeline {
         stage('Run Tests') {
             steps {
                 bat '''
-                . venv/bin/activate
+                . venv\\Scripts\\activate
                 pytest
                 '''
             }
